# right-answer-wrong-reason

./: .gitattributes  .gitignore  AGENTS.md  COCO.md  Makefile  README.md  pyproject.toml
configs/: default.yaml
data/synthetic/: README.md
latex/: figures  main.aux  main.tex  references.bib
latex/sections/: 01_introduction.tex  02_methods.tex  03_behavioral_results.tex  04_mechanistic_results.tex  05_discussion.tex
latex/tables/: behavior_summary.tex  label_counts.tex  patching_results.tex  probe_results.tex  rawr_vs_faithful.tex
notebooks/: walkthrough.ipynb
results/: README.md
results/analysis/: behavior_summary.csv  label_counts.csv  labeled_responses.csv  patching_results.csv  probe_results.csv  rawr_vs_faithful.csv  report.md
scripts/: 01_build_benchmark.py  02_generate.py  03_label_behavior.py  04_extract_activations.py  05_run_analyses.py  06_make_report.py  07_run_patching.py
src/rawr/: __init__.py  activations.py  analysis.py  benchmark.py  generate.py  label.py  latex_tables.py  patching.py  patching_analysis.py  plotting.py  prompts.py  report.py  sae_features.py
