[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rawr"
version = "0.1.0"
description = "Right-Answer Wrong-Reason: detecting shortcut reasoning in open-weight reasoning models"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "rawr-demo"}]
license = {text = "Apache-2.0"}
dependencies = [
  "torch>=2.2",
  "transformers>=4.44",
  "transformer_lens>=2.0",
  "datasets>=2.20",
  "huggingface_hub>=0.24",
  "accelerate>=0.33",
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "tqdm>=4.66",
  "pyyaml>=6.0",
  "jinja2>=3.1",
]

[project.optional-dependencies]
sae   = ["sae_lens>=3.0"]
dev   = ["jupyter", "ipykernel", "ruff", "pytest"]

[tool.setuptools.packages.find]
where = ["src"]
